# CHTTPServer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json  main.c
.cache/clangd/index/: Allocator.c.C36943419275B28A.idx  Allocator.h.E47F2DED9EC07A37.idx  HTMLReader.c.9BA3C86A9269BD6A.idx  HTMLReader.h.8A3E6CC977325615.idx  Utils.h.AA1F12FD942E2A42.idx  main.c.BFA9A926A35D2D6C.idx
HTMLSrc/: index.html
Utils/: Allocator.c  Allocator.h  HTMLReader.c  HTMLReader.h  Utils.h
